--- a/Union_Find/Percolation_Assignment/src/CMakeLists.txt
+++ b/Union_Find/Percolation_Assignment/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.16)
 project(PercolationMCS)
-add_executable(PercolationMCS MonteCarloSim.cpp Percolation.cpp PercolationStats.cpp Union_Find_QU.cpp)
+add_executable(PercolationMCS MonteCarloSim.cpp Percolation.cpp PercolationStats.cpp Union_Find_WQU.cpp)
